# ChangeLog for dev-python/subunit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/subunit/ChangeLog,v 1.67 2015/03/26 06:41:44 idella4 Exp $

*subunit-1.0.0 (26 Mar 2015)

  26 Mar 2015; Ian Delaney <idella4@gentoo.org> +files/1.0.0-tests.patch,
  +subunit-1.0.0.ebuild, -subunit-0.0.10-r1.ebuild, -subunit-0.0.15-r1.ebuild,
  -subunit-0.0.15.ebuild, -subunit-0.0.18-r1.ebuild, -subunit-0.0.18.ebuild,
  files/0.0.21-tests.patch:
  bump; rebase tests.patch for testsuite, add commented list of tests found to
  fail only under py2.7, pypy in updated test phase, rm many old

  08 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -subunit-0.0.10.ebuild:
  Remove old.

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> subunit-0.0.21-r1.ebuild:
  ppc stable, bug 540290

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> subunit-0.0.21-r1.ebuild:
  ppc64 stable, bug 540290

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> subunit-0.0.21-r1.ebuild:
  add arm64 support, tested on A53 board

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> subunit-0.0.21-r1.ebuild:
  Stable for ppc, wrt bug #525994

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -subunit-0.0.8.ebuild,
  -subunit-0.0.9.ebuild:
  Remove old.

*subunit-0.0.21-r1 (04 Jan 2015)

  04 Jan 2015; Mike Gilbert <floppym@gentoo.org> +subunit-0.0.21-r1.ebuild,
  -subunit-0.0.21.ebuild:
  Install perl modules in vendor_perl, bug 534654.

  04 Jan 2015; Andreas K. Huettel <dilfridge@gentoo.org> subunit-0.0.15.ebuild,
  subunit-0.0.15-r1.ebuild, subunit-0.0.16.ebuild, subunit-0.0.18.ebuild,
  subunit-0.0.18-r1.ebuild, subunit-0.0.18-r2.ebuild, subunit-0.0.19.ebuild,
  subunit-0.0.21.ebuild:
  Installs perl modules. Adding slot operator on Perl dependency.

  30 Oct 2014; Markus Meier <maekke@gentoo.org> subunit-0.0.21.ebuild:
  arm stable, bug #525994

  27 Oct 2014; Agostino Sarubbo <ago@gentoo.org> subunit-0.0.16.ebuild:
  Stable for ppc64, wrt bug #506620
