@@ -4,24 +4,26 @@ Hash: SHA256
 AUX 0.0.21-tests.patch 1104 SHA256 eea7b7270ab9a1531a580baffc93e2411cfbded675d7f12c6fa8f96770fb1a65 SHA512 013bea4496011da1c40bd22ecaec034cd70399c1da5656519d36de1622e6d3b6dec689b2ad267d1417f188217f5c37cb0dfa6e8d56cd0be30953b53169f26fb1 WHIRLPOOL 5ebb2fab0711f44ce1559011c5d323fb0bbb95c59990cd87935ff2cac9308e0bdf3c8664deafdc16eba8f2801663cbe2e5f595fcfd4b0eaed8534131aafb7377
 AUX 1.0.0-tests.patch 1058 SHA256 f83089e4cdfcd5a6a3898fb8dd94689808e47a1bb35c3b362cd6e2ccfbf0597b SHA512 b1accf4434415357a8c235c6b660cec440096616887e62fb45a2d15e314a3abb9be825bf4e8ec8d4b18d7ab08197cacd6916bbde87dc5b88c6f3e80ca89b1de0 WHIRLPOOL 2ff71e98fedca6f6cbd32ecd43a5ee0c9f3dfb68701c3a562e600cbc4f57db1a048af81914a66637ef30310e820bf215ea6b1414f46f27d4f896b1acbaac6f57
 AUX shell-tests.patch 1116 SHA256 bcd01b766649db3d7866ab8d906dc0fc26cfeb346de00beb786f013c432bb406 SHA512 cc85aec134bb87fb14fcf16991e5f524e3fe6a2207e8177231ba70cf013df1b9fec2844d9d36ed3de698f955f2041477ab7cc13f613e30998c994f9175396de8 WHIRLPOOL bde67a913d74c409a2528f534b35f8b52c05c40fa2639e4b2e8c732dd924593faeb1c89ed97ca0d7287246150cf6ec53634af35d69a926d5018b2b3a6f317594
+DIST subunit-0.0.10.tar.gz 418118 SHA256 94a9837086ff773b00b097dbf877ab5b1d2255a003542f66e5720c867940912f SHA512 a61254a2f80785928c5645e4d88128c76dd4b4c9e1977c81fc356423ada58bd6acf9694894cbaa1e63648cf52c6691eb998b73829e51270a5d418ad639f1482c WHIRLPOOL 89f7352a1518074f05a678548eacb1be06a85178ecc5d28d4be22065fa8f9a27566c4787674ba32957f946b18f200052b0524ebb4599475bac47e677f430d814
 DIST subunit-0.0.16.tar.gz 437895 SHA256 47dbeacd39ada80e52d5db3258fbe40a42f096450ef8a674071166594b0e56c3 SHA512 1e1c75e6df505661ca67ffe7dfacf0cf91399ffd3e383dd873fed9991f1d04959dfef2ca4db03a415bacd9ea5d0267a8504cd0b0e5d532808aa58a20233e13ad WHIRLPOOL cf68385a6f39b048324be1e708254bcc05e9faaa55316f883eb40649e9a2bda746ad22b4f2f51019ce9015cf35ccd6feb43a3cf8e67f36c610c8adbc645ead20
 DIST subunit-0.0.18.tar.gz 439455 SHA256 f4508a83b1206a85f6c1cfc57f83edc2ca13d62cc65be90ec27eadfa792a6eb4 SHA512 d992207398fa29ac61b32b4b671c686c6af4de804bc9ef9b5bde78f5036880cfa670dded10fb272f41f7d57d68f91061c1c7b89039bda0c3c775df329ce912f6 WHIRLPOOL 8730b140dc886a57517d6e5be24e1ddb316761e2e7eae0eeb8f949a09a9312195e503032dabab20172a79d08d93d74ea041a445742adbf81f4e3bf877d2df54f
 DIST subunit-0.0.19.tar.gz 441610 SHA256 cd2921c49b07e1f524582d57f2d3b496ae4557ffe350a47d8f1722311356fdb3 SHA512 0e879046b31076a200fe26ebcca6dd162a90f25b125a757e370b6c0aa95fd4ce351f2f84448c90ba982676468155254e8a29ad03ed98ca472e3e19b93a2a4761 WHIRLPOOL d5a7dfa85cf64d3b079b8caf4d5418c84caad9d1485e3f545650e1414fb1d1ebabbcf372f387a7fbf7ded9017145351bb6b315f0288d6c04cc17a278522f1b9c
 DIST subunit-0.0.21.tar.gz 441691 SHA256 f12565cb0c6efdee4d96e9e640db4bcbfbede734223de940f9f3969c4a8e2f4c SHA512 2bbf312c7d80c3bea02163924a205df5553be3eceab5b2951512f9d71110608f1243440491a22c878d0691b9197dfe19c5c49fbb608883a038fa86626144ab12 WHIRLPOOL 749b0763d568f6a9803de11a59b92b357b41b8ae64e531e6cdefcc6114d6c4f2799c6c36e8372b92f1d173123d7a5847782d1f3ff193c83a7755a95a773204e3
 DIST subunit-0.0.6.tar.gz 388872 SHA256 98f5e72107322dc1c502543384e1ed790671d319a5096eab4f4d20641555de77 SHA512 79aa46a2cbdbe27bb1fcfa02a65bd10ba9ccf5013f9cbd8549d5aad304b8d451ed6a854b1b77415601aab8f6966b7004337634ea5e7bd8387dda8209781b118f WHIRLPOOL fd05cfed6e7cd50df57dfc3dd0c45bf955a033abf7c43849193a9f7515847eb7d2df5819e964407dac253c46ba5073f2bb1499a92a94a072591a4db4d5128c2b
 DIST subunit-1.0.0.tar.gz 441964 SHA256 55dc2c1c22c650ad9f109516a72a9d37b986939de25b6195210724ce79ced0ba SHA512 082990e777667edb7d3666b554a1818a976369742a1ed9bbc47a9c59f97937c0619a315893f532e49c2cd798537b320ca2aa9df916906b85a75db8a7d4f8bc84 WHIRLPOOL e6650f991ecb0c7d0fc6001947cc5f11740c34783e62485bf5e8acebc9369665a8658789c7b7df5608efe8c5931b263952383231e8989f3be98cca2a807ba471
+EBUILD subunit-0.0.10-r1.ebuild 1291 SHA256 2f7c92f1ead187871674233e7c1b41ddd81a0f42fe19ed48c2848e96700407d4 SHA512 99568a93125384c7ecccfc771033903180cc37b09a95aab5d326c9d569eb3979481f2cf75750394e9fd4eecbae279e3dfc98bbfe9d437652aa3eaaab3db040b5 WHIRLPOOL f0bc2f641a181ccba7e04e7e51730796db1959a0f68747d02c56235970e197949a677f1007151155f7494b9a5f2b1746b780e6cc9f2b52857edebd52a2d2b2a4
 EBUILD subunit-0.0.16.ebuild 1558 SHA256 6f8c991f79cbb9a3f4bbff9113955a826f2d7747e5b036151506cb7b24bb9b3d SHA512 df6fe4a1f303277c502974ba6c63b807368c57a89aae9e50dc47c88d27892b81e3d66db5f8d3b9f72d0773e5ecaf12ee593b9237d4d9bf837ee48d9b98247475 WHIRLPOOL af43a790d70c29e2add60a3d99c1836ea082064f06600ee7549083ded376071dfe29c7a2d3d44bbb4f0718c0cfef0ceb13b0d339c8f9ed61ed9aa63c668a48bf
 EBUILD subunit-0.0.18-r2.ebuild 2114 SHA256 ff01b0157b01adfda9a94761cdfb599684328575a30f41b56a19db3d2db4f751 SHA512 a12432347cd7639de57f5b15a9bdb4a4d1b7aacd4dc9a6abb51becbff9b76a93bdff4a9e170f30d991052908e8fb83664d0451da1ea0e8478ae0de3c9bec675e WHIRLPOOL 27a367bd0f642df249c7e2f6dec993b7feb9321b698a02d2b5ac9f8aa0b682f46b8b4dd8f7ca59c4e9871910469ef49dfa6a566b51b850d598ee3d49b0d64aea
 EBUILD subunit-0.0.19.ebuild 2180 SHA256 94e7afd0e0733c49605103247eb38f9168c097a26a4c7cc5e9daac58372e91c1 SHA512 20d7d9d03f751e494dfedb7a0506dc1cc1916f332f814215a587beebc190cf6cad8cf7023270fb22a3213bac3b4a2d81ff992d61763cbaa77fd03fe4b8e9955a WHIRLPOOL 29b5eba0805c01cd6dd0cad4d409a599567a0586e4b40e51a02bafd5b4d99d23664964687f02d139605c92a9affb12e30197ad76666188a4294325ba938d8b73
 EBUILD subunit-0.0.21-r1.ebuild 2176 SHA256 6490950d2b9c30db4f60b957067dbbcc32a46a5038572906faf0c2d4f6d284a5 SHA512 e273924dc1984930534e29c7a77a4b4176b3cb1bf299cf058ca2710edc0245a565245fc5771a6bcce2423f2b58068a81af8b4a54bb8e437e88ffa37be9cbb704 WHIRLPOOL e77fb9708b099f982fb98d0523f92877ca32e38b924816dc2f2604460a133313283383f1ffc11e31131c84ddbc6016e26177144d8915c00bef067d56cfdfdf8a
 EBUILD subunit-0.0.6.ebuild 900 SHA256 167446ce120783570169c561406ba37351b761da0fc2b4f03158b76ba23eeb71 SHA512 bd88311667d7456a0a2ded9a523e38a3693c5e07eff7e7c4469a8c9b8b06e636f7d68c9a22bc2f23dbff8294b6e5430cf218c52d5877f853692c106aca52b113 WHIRLPOOL 65dce2e93b7038ddcf9ec544b7f5bba78328d2653ee95deeba79d7bcc0cf16b04976657c2a768db2e85372a3f437eda56a97049319f4d21b30b24403534b2817
 EBUILD subunit-1.0.0.ebuild 2604 SHA256 7894756a75b58ec93c68ce7eb02d2ea3d06a8cd20554d84205586cd26b25aae0 SHA512 20984cce004b0b88cc16bcde4ec687f3063e2188bf1eafaca813d53e31a913d03fe51e64ce61984b660340cc41eb07d6091b9be7ba6bdc0d57c6a17b41e99373 WHIRLPOOL e02f114ed32e8655122514ea27450512452cd9ff8a176f9e38f67562ff569d378834a5495db3fce0a364d1c7edf66a95f08363980de9197a9695665fc5765ceb
-MISC ChangeLog 9255 SHA256 cd7ddd78d9f74cae817466e1d54df5b0197c27ea0d1a26f180401e26f46780e3 SHA512 d1e6adb41ab56cd39dcbb47e38529843cc880c4585239d01ad4229945e5d667eabb97ded02a79d721a561a3e664cfc423f85d55e35b4e1955c0ecd1ac5c7756c WHIRLPOOL afb23dad3ffc58e2462a26e2b8e3ad1062d4189a718ff9341cf6edf14e42be4f5514677610fcb60fe101c683eaff5e7338bfbb109ebc548d584dbfdd8d9e4908
+MISC ChangeLog 9470 SHA256 fd14047200ff18faed11b88c777e4821ea21b928104709b890fec8dd7b60a23f SHA512 56911b44100dc2a8be85f4cb0f666c60a7c0dd5973b6f77ccdc27d355b296c13f40ed5696e00f5afcaa71756e3618dcb7ec3f368daf4c9bb79702b3128e9fa40 WHIRLPOOL bd6789dbb0bbe1635344655d4f89aca3327608ef80b581e86e9361eba18b4f3042532dad6b5b35505d37f3bc7e384be30eefbaff4b9d39486c049c2871e1b2e1
 MISC metadata.xml 214 SHA256 98d0eb31b6b097fe81a1f0e0af40f17d4b4c024d57861b935618b4df9f184a64 SHA512 9e55d24c684b01b9973636bef71b2dbbd1d0fb98c388e3ec54309239adee108c411dd871044cf0f8a5b62318b6c95bc449ef2984d141f13d2778d14cad7f3484 WHIRLPOOL 4f2f7a64b6bf835fa086c048f3e7c86d9934431dfa51566e295f5c5079d80af315367e43e281e4199d792eb6d2cc4d8bd57c51960047adbea5a523c2ce00a582
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUTqjYACgkQso7CE7gHKw3dtwCdHgprRITV9aixWn6ebpMlEJPp
-F7kAmgK7fD2zeRElxJMs9RcPi6uz337B
-=0cWd
+iEYEAREIAAYFAlUT03QACgkQso7CE7gHKw28NwCfVVOSYYym7VkDkuqkUwwGKOIR
+1KcAni2ASGvm0qrx8UuTzcZr6/EvB5EI
+=7+fN
 -----END PGP SIGNATURE-----
