@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=>=dev-python/testtools-0.9.23[python_targets_pypy(-)?,python_targets_python3_3(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy3(-),-python_single_target_python3_4(-),python_single_target_pypy(+)?,python_single_target_python3_3(+)?,python_single_target_python2_7(+)?] dev-lang/perl dev-libs/check dev-util/cppunit >=sys-devel/automake-1.12 virtual/pkgconfig
+DESCRIPTION=A streaming protocol for test results
+EAPI=5
+HOMEPAGE=https://launchpad.net/subunit http://pypi.python.org/pypi/python-subunit
+IUSE=python_targets_pypy python_targets_python3_3 python_targets_python2_7 python_single_target_pypy python_single_target_python3_3 python_single_target_python2_7
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=Apache-2.0 BSD
+RDEPEND=>=dev-python/testtools-0.9.23[python_targets_pypy(-)?,python_targets_python3_3(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy3(-),-python_single_target_python3_4(-),python_single_target_pypy(+)?,python_single_target_python3_3(+)?,python_single_target_python2_7(+)?]
+SLOT=0
+SRC_URI=http://launchpad.net/subunit/trunk/0.0.10/+download/subunit-0.0.10.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
+_md5_=ee2632e2543839671bc15416d50049e3
